--- a/Untitled-1.html
+++ b/Untitled-1.html
@@ -7,14 +7,13 @@
     <link rel='stylesheet' href='https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.10.2/css/all.min.css'>
     <link rel="stylesheet" href="assets/css/style.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bulma@0.9.3/css/bulma.min.css">
-    <title>Travel Buddy</title>
+    <title>Document</title>
 </head>
 <body>
     <nav class="navbar" role="navigation" aria-label="main navigation">
         <div class="navbar-brand">
             <div class="navbar-item">
-                <img src="assets/images/TB Logo muted colors-sm icon.png" width="80">
-                Travel Buddy
+                <strong>Travel Buddy</strong> 
             </div>
         </div>
         <div class="navbar-end">
@@ -110,7 +109,7 @@
                         <option value="DKK">DKK</option>
                         <option value="DOP">DOP</option>
                         <option value="EGP">EGP</option>
-                        <option value="EUR"  selected >EUR</option>
+                        <option value="EUR">EUR</option>
                         <option value="FJD">FJD</option>
                         <option value="GBP">GBP</option>
                         <option value="GTQ">GTQ</option>
@@ -119,7 +118,7 @@
                         <option value="HUF">HUF</option>
                         <option value="IDR">IDR</option>
                         <option value="ILS">ILS</option>
-                        <option value="INR">INR</option>
+                        <option value="INR" selected>INR</option>
                         <option value="ISK">ISK</option>
                         <option value="JPY">JPY</option>
                         <option value="KRW">KRW</option>
