--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
   <nav class="navbar has-shadow is-white" role="navigation" aria-label="main navigation">
     <div class="navbar-brand">
       <a class="navbar-item">
-        <img src="assets/images/logo.jpg" style="max-height: 70px;" class="py-2 px-2" > <h1>Travel Buddy</h1>
+        <img src="assets/images/logo.jpg" alt="logo" style="max-height: 70px;" class="py-2 px-2" > <h1>Travel Buddy</h1>
       </a>
       <a class="navbar-burger" id="burger">
         <span></span>
